dist/1.0/bin/sample/retrieveUnpackaged/objects/ConfiguredTariff__c.object
<CustomObject>
    <fields>
        <fullName>ConfiguredComponent__c</fullName>
        <label>Configured Component</label>
        <referenceTo>ConfiguredComponent__c</referenceTo>
        <relationshipLabel>Configured Tariffs</relationshipLabel>
        <relationshipName>Configured_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConnectionPoint__c</fullName>
        <label>Connection Point</label>
        <picklist>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REDIR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tariff__c</fullName>
        <label>Tariff</label>
        <referenceTo>Tariff__c</referenceTo>
        <relationshipLabel>Configured Tariffs</relationshipLabel>
        <relationshipName>Configured_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Configured Tariff</label>
    <nameField>
        <label>Configured Tariff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configured Tariffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>